--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:5000",
   "name": "stockoverflow",
   "version": "0.1.0",
   "private": true,
@@ -6,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
