--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "concurrently": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.11",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
