--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.2.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-responsive-modal": "^4.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "uuid": "^7.0.2"
