--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js",
+    "server": "nodemon index.js",
     "client": "npm start --prefix ../client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"npm run index\" \"npm run client\"",
     "migrate": "knex migrate:latest",
     "migrate:down": "knex migrate:down",
     "migrate:rollback": "knex migrate:rollback",
@@ -27,6 +27,7 @@
     "my": "^0.3.3",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
+    "path": "^0.12.7",
     "sql": "^0.78.0",
     "uuid": "^7.0.3"
   }
