--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "scripts": {
+    "client-install": "npm install --prefix client",
+    "start": "node server.js",
+    "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "start": "npm start --prefix server",
-    "server": "nodemon index --prefix server",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install --prefix server && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client        && npm run build --prefix client",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
