--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
     "path": "^0.12.7",
+    "serve": "^11.3.2",
     "sql": "^0.78.0",
     "uuid": "^7.0.3"
   }
