--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
+  "name": "stockoverflow",
+  "version": "1.0.0",
+  "description": "stock trading app",
+  "main": "index.js",
   "scripts": {
-    "client-install": "npm install --prefix client",
-    "start": "node server.js",
-    "server": "nodemon server.js",
     "client": "npm start --prefix client",
+    "start": "npm start --prefix server",
+    "server": "nodemon index --prefix server",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client        && npm run build --prefix client",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install --prefix server && npm run build --prefix client"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kyh8725/stockoverflow.git"
+  },
+  "author": "Daniel",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kyh8725/stockoverflow/issues"
+  },
+  "homepage": "https://github.com/kyh8725/stockoverflow#readme"
 }
