--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,16 @@
   "description": "stock overflow server",
   "main": "server.js",
   "scripts": {
-    "client": "npm start --prefix client",
-    "start": "npm start --prefix server",
-    "server": "nodemon index --prefix server",
+    "client-install": "npm install --prefix client",
+    "start": "node server.js",
+    "server": "nodemon server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "knex migrate:latest",
     "migrate:down": "knex migrate:down",
     "migrate:rollback": "knex migrate:rollback",
-    "seed": "knex seed:run"
+    "seed": "knex seed:run",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install --prefix server && npm run build --prefix client"
   },
   "author": "Daniel Kim",
   "license": "ISC",
