--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "server": "nodemon index --prefix server",
     "build": "react-scripts build",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "migrate": "knex migrate:latest",
+    "migrate:down": "knex migrate:down",
+    "migrate:rollback": "knex migrate:rollback",
+    "seed": "knex seed:run",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install --prefix server && npm run build --prefix client"
   },
   "repository": {
