--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "uuid": "^7.0.3"
   },
   "scripts": {
+    "startT": "react-scripts start",
     "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
